# AIBot

./: .gitignore  AIBot.sln  CMakeLists.txt  README.md
AIBot/: AIBot.vcxproj  AIBot.vcxproj.filters  Filesystem.cpp  Filesystem.h  Inference.cpp  Inference.h  Logger.h  MouseEv.cpp  MouseEv.h  MoveAdp.cpp  MoveAdp.h  ScreenShot.cpp  ScreenShot.h  main.cpp
GeneralInference/: GeneralInference.vcxproj  GeneralInference.vcxproj.filters  GeneralStruct.h  InferenceEngine.cpp  InferenceEngine.h  ModelParser.cpp  ModelParser.h  PrePostProcessor.cpp  PrePostProcessor.h  Utils.cpp  Utils.h  Yolov5PrePostProcessor.cpp  Yolov5PrePostProcessor.h  Yolov8PrePostProcessor.cpp  Yolov8PrePostProcessor.h  main.cpp
Inference/: Export.h  Filesystem.cpp  Filesystem.h  ISession.h  Inference.vcxproj  Inference.vcxproj.filters  InferenceEngine.cpp  InferenceEngine.h  Misc.h  Model.h  ModelParser.cpp  ModelParser.h  Prepostprocessor.cpp  Prepostprocessor.h  YoloDefine.h  dllMain.cpp
MouseEvent/: Export.h  MouseEvent.vcxproj  MouseEvent.vcxproj.filters  MouseMove.cpp  MouseMove.h  dllMain.cpp
MoveAdaptor/: Export.h  MoveAdaptor.cpp  MoveAdaptor.h  MoveAdaptor.vcxproj  MoveAdaptor.vcxproj.filters  PID.cpp  PID.h  dllMain.cpp
ScreenCapture/: Capture.cpp  Capture.h  Export.h  ScreenCapture.vcxproj  ScreenCapture.vcxproj.filters  dllMain.cpp  tsf.cpp  tsf.h
include/Common/: Filesystem.h  Logger.h  Singleton.h
include/InferenceEngine/: General.h  InferenceEngine.h  InferenceEngineFactory.h  PrePostProcessor.h
src/: main.cpp
src/Common/: Filesystem.cpp
(+7 files in other folders)
